crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_get_metadata_group.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 25 50 01 04 04  00 00 00 07 02 04 05 01 |...%P...........
00000010 | 00 00 00 01 03 04 12 70  68 75 78 2e 74 75 69 2e |.......phux.tui.
00000020 | 6c 61 79 6f 75 74 2f 76  31                      |layout/v1
