crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_hello_color_indexed16.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: "dump_frame(&hello_with_color(ColorSupport::Indexed16))"
---
00000000 | 00 00 00 20 01 00 00 00  10 70 68 75 78 2d 63 6c |... .....phux-cl
00000010 | 69 65 6e 74 2f 74 65 73  74 00 00 00 02 00 00 02 |ient/test.......
00000020 | 01 07 03 01                                      |....
