crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_hello_layers_all.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 1e 01 00 00 00  0d 70 68 75 78 2d 74 75 |.........phux-tu
00000010 | 69 2f 74 65 73 74 00 00  00 02 00 00 00 07 07 03 |i/test..........
00000020 | 01 00                                            |..
