crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_hello_layers_l1_l3.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 1d 01 00 00 00  0d 70 68 75 78 2d 67 75 |.........phux-gu
00000010 | 69 2f 74 65 73 74 00 00  00 02 00 00 00 05 07 03 |i/test..........
00000020 | 01                                               |.
