crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_hello_layers_l1_only.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 2b 01 01 04 0f  70 68 75 78 2d 61 67 65 |...+....phux-age
00000010 | 6e 74 2f 74 65 73 74 02  04 02 00 00 03 04 02 00 |nt/test.........
00000020 | 02 04 04 02 00 00 05 04  06 00 01 07 03 01 00    |...............
