crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_hello_ok.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 14 80 00 00 00  02 00 00 07 00 00 00 08 |................
00000010 | 70 68 75 78 2d 73 72 76                          |phux-srv
