crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_input_focus_gained.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 0d 14 01 04 05  00 00 00 00 03 02 04 01 |................
00000010 | 00                                               |.
