crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_input_focus_lost.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 06 14 00 00 00  03 01                   |..........
